@@ -35,8 +35,10 @@ collectd (4.10.4-1) unstable; urgency=low
       to correctly check for ip_vs.h.
   * debian/control:
     - Updated standards-version to 3.9.2 -- no changes.
+  * debian/collectd-core.collectd.init.d:
+    - Added a description LSB header field.
 
- -- Sebastian Harl <tokkee@debian.org>  Mon, 09 Jan 2012 15:24:51 +0100
+ -- Sebastian Harl <tokkee@debian.org>  Mon, 09 Jan 2012 15:32:07 +0100
 
 collectd (4.10.1-2.1) unstable; urgency=high
 
